# hacker_game

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Computer.cpp  Computer.hpp  Makefile  Player.cpp  PlayerSave.cpp  README.md  SaveFile.cpp  SaveFile.hpp  appcore.cpp  appcore.hpp  cmake_install.cmake  config.json  ledit.cpp  ledit.hpp  main  main.cpp  main.qml  market.hpp  menubar.cpp  menubar.hpp  player.hpp
.cmake/api/v1/reply/: cache-v2-b4f885b8ab2f6a9199b5.json  cmakeFiles-v1-3b897028cc48e34fe31f.json  codemodel-v2-9e00c2f7a266a250c112.json  codemodel-v2-d54d6199c43203062272.json  index-2020-03-23T15-20-40-0897.json  index-2020-03-23T22-04-32-0719.json  target-main-201f074df30c5029de0a.json  target-main-eeb45407d44f3cfba9d5.json  target-main_autogen-ba9c4b73fda3d009e9b1.json
main_autogen/: moc_predefs.h  mocs_compilation.cpp
main_autogen/EWIEGA46WW/: moc_appcore.cpp
